--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
+    "@mui/material": "^5.15.16",
+    "@mui/x-charts": "^7.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.7.2",
@@ -23,7 +27,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.0",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
     "recharts": "^2.12.3",
