--- a/package.json
+++ b/package.json
@@ -12,27 +12,36 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
     "@mui/x-charts": "^7.3.2",
+    "@mui/x-date-pickers": "^7.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "react-select": "^5.8.0",
+    "react-select-virtualized": "^5.5.1",
+    "react-selectize-js": "^0.0.10",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
+    "react-windowed-select": "^5.2.0",
     "recharts": "^2.12.3",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -40,6 +49,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-virtualized": "^9.21.29",
+    "@types/react-virtualized-select": "^3.0.17",
     "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
