--- a/package.json
+++ b/package.json
@@ -28,34 +28,35 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "react-lite-month-picker": "^1.2.18",
     "react-select": "^5.8.0",
     "react-select-virtualized": "^5.5.1",
     "react-selectize-js": "^0.0.10",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.10",
     "react-windowed-select": "^5.2.0",
-    "recharts": "^2.12.3",
+    "recharts": "^2.12.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-virtualized": "^9.21.29",
+    "@types/node": "^20.12.8",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-virtualized": "^9.21.30",
     "@types/react-virtualized-select": "^3.0.17",
     "@types/react-window": "^1.8.8",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
