--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
-    "react-day-picker": "^8.10.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
-    "react-lite-month-picker": "^1.2.18",
     "react-select": "^5.8.0",
     "react-select-virtualized": "^5.5.1",
     "react-selectize-js": "^0.0.10",
