--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "react-responsive": "^10.0.0",
     "react-select": "^5.8.0",
     "react-select-virtualized": "^5.5.1",
     "react-selectize-js": "^0.0.10",
